# knotter

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  TODO.md  book.toml
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: knotter.rb
crates/knotter-cli/: Cargo.toml
crates/knotter-cli/src/: error.rs  main.rs  notify.rs  util.rs
crates/knotter-cli/src/commands/: backup.rs  completions.rs  contacts.rs  dates.rs  interactions.rs  loops.rs  merge.rs  mod.rs  remind.rs  schedule.rs  sync.rs  tags.rs  tui.rs
crates/knotter-cli/src/commands/merge/: scan_same_name.rs
crates/knotter-cli/src/commands/remind_fmt/: mod.rs  tests.rs
crates/knotter-cli/tests/: cli.rs
crates/knotter-config/: Cargo.toml
crates/knotter-config/src/: lib.rs
crates/knotter-core/: Cargo.toml
crates/knotter-core/src/: dto.rs  error.rs  lib.rs  time.rs
crates/knotter-core/src/domain/: contact.rs  contact_date.rs  email.rs  ids.rs  interaction.rs  merge.rs  mod.rs  phone.rs  tag.rs
crates/knotter-core/src/filter/: ast.rs  mod.rs  parser.rs
crates/knotter-core/src/rules/: cadence.rs  dates.rs  due.rs  loops.rs  mod.rs  validation.rs
crates/knotter-store/: Cargo.toml
crates/knotter-store/migrations/: 001_init.sql  002_email_sync.sql  003_email_sync_uidvalidity.sql  004_email_message_dedupe_indexes.sql  005_email_message_id_normalize.sql  006_contact_merge_candidates.sql  007_contact_dates.sql  008_contact_dates_custom_label.sql  009_telegram_sync.sql  010_contact_sources.sql  011_contact_sources_external_id_norm.sql
crates/knotter-store/src/: backup.rs  db.rs  error.rs  lib.rs  migrate.rs  paths.rs  query.rs  temp_table.rs
crates/knotter-store/src/repo/: contact_dates.rs  contact_sources.rs  contacts.rs  email_sync.rs  emails.rs  interactions.rs  merge_candidates.rs  mod.rs  tags.rs  telegram_accounts.rs  telegram_sync.rs
crates/knotter-store/tests/: backup.rs  contact_sources.rs  contacts.rs  dates.rs  email_sync.rs  emails.rs  export.rs  filters.rs  interactions.rs  merge.rs  migrations.rs  reminders.rs  telegram.rs
crates/knotter-sync/: Cargo.toml
crates/knotter-sync/src/: carddav.rs  email.rs  error.rs  ics.rs  lib.rs  macos.rs  source.rs  telegram.rs  vcf.rs
crates/knotter-tui/: Cargo.toml
crates/knotter-tui/src/: actions.rs  app.rs  main.rs  util.rs
crates/knotter-tui/src/ui/: mod.rs
docs/: ARCHITECTURE.md  DB_SCHEMA.md  KEYBINDINGS.md  RELEASE_NOTES.md  SUMMARY.md  cli-output.md  completions.md  configuration.md  import-export.md  index.md  packaging.md  scheduling.md  tui-smoke.md
