[package]
name = "knotter-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
knotter-core = { path = "../knotter-core" }
knotter-store = { path = "../knotter-store" }
knotter-sync = { path = "../knotter-sync" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = { version = "4", optional = true }

[features]
default = []
desktop-notify = ["notify-rust"]

[[bin]]
name = "knotter"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
