[package]
name = "knotter-cli"
version = "0.1.2"
authors = ["Tomatyss <tomatyss@users.noreply.github.com>"]
license = "MIT"
description = "Terminal-first personal CRM and friendship tracker (CLI)."
repository = "https://github.com/tomatyss/knotter"
edition = "2021"

[dependencies]
knotter-core = { path = "../knotter-core" }
knotter-config = { path = "../knotter-config" }
knotter-store = { path = "../knotter-store" }
knotter-sync = { path = "../knotter-sync" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = { version = "4", optional = true }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
desktop-notify = ["notify-rust"]
dav-sync = ["knotter-sync/dav-sync"]

[package.metadata.deb]
maintainer = "Tomatyss <tomatyss@users.noreply.github.com>"
depends = "$auto"

[[bin]]
name = "knotter"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
