[package]
name = "knotter-config"
version = "4.1.0"
authors = ["Tomatyss <tomatyss@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Configuration loader for knotter."
repository = "https://github.com/tomatyss/knotter"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
dirs = "6"
knotter-core = { path = "../knotter-core" }
lettre = { version = "0.11", default-features = false, features = ["builder"] }

[dev-dependencies]
tempfile = "3"
