[package]
name = "knotter-tui"
version = "0.4.6"
authors = ["Tomatyss <tomatyss@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Terminal-first personal CRM and friendship tracker (TUI)."
repository = "https://github.com/tomatyss/knotter"
edition = "2021"

[dependencies]
knotter-core = { path = "../knotter-core" }
knotter-config = { path = "../knotter-config" }
knotter-store = { path = "../knotter-store" }
anyhow = "1"
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[package.metadata.deb]
maintainer = "Tomatyss <tomatyss@users.noreply.github.com>"
depends = "$auto"
